--- a/Cryptocop.Software.API/Cryptocop.Software.API/appsettings.json
+++ b/Cryptocop.Software.API/Cryptocop.Software.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "CryptoApiBaseUrl": "https://data.messari.io/api/v1/",
+  "CryptoApiBaseUrl": "https://data.messari.io/api/",
   "ConnectionStrings": {
     "CryptocopConnectionString": "Host=lucky.db.elephantsql.com;Username=bgmpytes;Password=54v-lhWRkP-SUtrjvhO-YKBiK5FWy9L6;Database=bgmpytes"
   },
