Started email service
Moved hashing and masking to helper functions

--- a/Cryptocop.Software.API/Cryptocop.Software.API/appsettings.json
+++ b/Cryptocop.Software.API/Cryptocop.Software.API/appsettings.json
@@ -16,5 +16,11 @@
     "issuer": "localhost",
     "audience": "localhost",
     "expirationInMinutes": 1440
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Exchange": "order_exchange",
+    "Queue": "order_queue",
+    "RoutingKey": "create-order"
   }
 }
