API & email service dockerized
Having trouble dockerizing payment service

Also added more exception checks to shopping cart

--- a/Cryptocop.Software.API/Cryptocop.Software.API/appsettings.json
+++ b/Cryptocop.Software.API/Cryptocop.Software.API/appsettings.json
@@ -18,9 +18,9 @@
     "expirationInMinutes": 1440
   },
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Exchange": "order_exchange",
-    "Queue": "order_queue",
+    "Queue": "order-queue",
     "RoutingKey": "create-order"
   }
 }
