--- a/cryptocop-payments/appsettings.json
+++ b/cryptocop-payments/appsettings.json
@@ -1,6 +1,6 @@
 {
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Exchange": "order_exchange",
     "Queue": "payment-queue",
     "RoutingKey": "create-order"
