--- a/cryptocop-payments/Dockerfile
+++ b/cryptocop-payments/Dockerfile
@@ -1,35 +1,12 @@
-# Build stage
-FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
-WORKDIR /src
+# syntax=docker/dockerfile:1
+FROM python:3.8-slim-buster
+
+WORKDIR /app
+
+COPY requirements.txt requirements.txt
+
+RUN pip install -r requirements.txt
 
 COPY . .
-RUN dotnet restore "cryptocop-payments.csproj" --disable-parallel
-RUN dotnet publish "cryptocop-payments.csproj" -c release -o /app --no-restore
 
-# Serve stage
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal
-WORKDIR /app
-COPY --from=build /app ./
-
-ENTRYPOINT ["dotnet", "cryptocop-payments.dll"]
-
-
-
-# FROM microsoft/dotnet:2.2-runtime-stretch-slim AS base
-# WORKDIR /app
-
-# FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
-# WORKDIR /src
-# COPY ["cryptocop-payments.csproj", "cryptocop-payments/"]
-# RUN dotnet restore "cryptocop-payments/cryptocop-payments.csproj"
-# COPY . .
-# WORKDIR "/src/cryptocop-payments"
-# RUN dotnet build "cryptocop-payments.csproj" -c Release -o /app
-
-# FROM build AS publish
-# RUN dotnet publish "cryptocop-payments.csproj" -c Release -o /app
-
-# FROM base AS final
-# WORKDIR /app
-# COPY --from=publish /app .
-# ENTRYPOINT ["dotnet", "cryptocop-payments.dll"]
+CMD ["python", "-u", "payment_service.py"]
