--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       ports:
         - 5672:5672
         - 15672:15672
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:15672"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
 
     cryptocop-software-api:
       build:
@@ -18,17 +23,15 @@ services:
       ports:
         - "5001:5001"
 
-    cryptocop-payment-service:
-      build:
-        context: ./cryptocop-payments
-        dockerfile: Dockerfile
+    cryptocop-email-service:
+      # platform: linux/amd64
+      build: ./cryptocop-emails
       restart: on-failure
       depends_on:
         - rabbitmq
 
-    cryptocop-email-service:
-      # platform: linux/amd64
-      build: ./cryptocop-emails
+    cryptocop-payment-service:
+      build: ./cryptocop-payments
       restart: on-failure
       depends_on:
         - rabbitmq
